--- a/contact.html
+++ b/contact.html
@@ -60,7 +60,7 @@
 	</div>
 	<div id="footer">
 		<div>
-			<span>123 St. City Location, Country | 987654321</span>
+			<span>123 St. City Location, Country INDIA | 987654321</span>
 			<p>
 				&copy; 2023 by Belle &amp; Carrie Rehabilitation Yoga. All rights reserved.
 			</p>
