address updated for new office location

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	</div>
 	<div id="footer">
 		<div>
-			<span>123 St. City Location, India | 7447490744</span>
+			<span>101, SUCCESS SQUARE,KHARADI,PUNE, India | 7447490744</span>
 			<p>
 				&copy; 2023 by Belle &amp; Carrie Rehabilitation Yoga. All rights reserved.
 			</p>
